# TernaryTrees

./: TernaryTrees.cabal  stack.yaml
Data/Map/: StringMap.hs
tests/: Spec.hs
